--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Bienvenido a mi web</h1>
-    <p>Rubén Navarro</p>
+    <p>Rubén Navarro - email@test.com</p>
 </body>
 </html>
