--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <h1>Bienvenido a mi web</h1>
     <p>Rubén Navarro - email@test.com</p>
     <p>RAMA ESTILOS</p>
+    <p>commit en rama-rebase</p>
     <h4>nuevo commit en ESTILOS</h4>
     <div>
         <p>Commit en master</p>
