--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
         <p>Commit en master</p>
     </div>
     <strong>commit en master para hacer rebase</strong>
+    <i>COmmit despues de fetch</i>
 </body>
 </html>
